# report-list-generator

./: Cargo.toml
src/: main.rs
src/controller/: app.rs  mod.rs  report.rs
src/model/: mod.rs
src/view/: mod.rs  style.rs
