[package]
name = "report_list_generator"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.9.0", features=["tokio", "glow"]}
iced_native = "*"
iced_futures = "*"
iced_aw = {version="0.5.1", features=["spinner"]}
tokio = {version="1.29.1", features=["fs", "io-util"]}
native-dialog = "0.6.4"
